add svgs and icons, adjusted routes, services and topBar
